--- a/style.css
+++ b/style.css
@@ -88,20 +88,9 @@ h3 {
 	font-weight: normal;
 }
 
-.more__btn{
-	width: 270px;
-	height: 60px;
-	margin-top: 45px;
-	border: 1px solid #ff4e2e;
-	padding: 16px 40px;
-	color: #ff4e2e;
-	background-color: white ;
-	cursor: pointer;
-	font-size: 18px;
-	font-family: Tahoma;
-}
 
-.more__btn:hover{
+
+.more__btn{
 	width: 270px;
 	height: 60px;
 	margin-top: 45px;
@@ -112,6 +101,15 @@ h3 {
 	cursor: pointer;
 	font-size: 18px;
 	font-family: Tahoma;
+	border-radius: 5px;
+}
+
+.more__btn:hover{
+	border: 1px solid #D01F1F;
+	color: white;
+	background-color: #D01F1F;
+	cursor: pointer;
+
 }
 
 .services{
